--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover">
     <title>Гриневич Ксения - Портфолио</title>
     <link rel="icon" href="assets/favicon1.ico" type="image/x-icon">
+    
+    <!-- CSS с кешированием -->
     <link rel="stylesheet" href="style/styles.css">
 </head>
 
@@ -18,7 +20,11 @@
                         <img src="assets/favicon1.ico" 
                             srcset="assets/favicon1.ico 1x, assets/favicon1.ico 2x" 
                             alt="Логотип" 
-                            class="header-logo retina-image">
+                            class="header-logo retina-image"
+                            width="32"
+                            height="32"
+                            loading="lazy"
+                            decoding="async">
                         <h1 class="header-title">Гриневич Ксения</h1>
                     </div>
                     <button class="theme-toggle" id="themeToggle">
@@ -58,7 +64,9 @@
                                 <img src="images/photo.png" 
                                      srcset="images/photo.png 1x, images/photo.png 2x" 
                                      alt="Фото Гриневич Ксения" 
-                                     class="profile-image responsive-image">
+                                     class="profile-image responsive-image"
+                                     width="300"
+                                     height="300">
                             </picture>
                         </div>
                         <div class="profile-info">
@@ -128,7 +136,13 @@
                                 <picture>
                                     <source media="(min-width: 1200px)" srcset="images/project1.png">
                                     <source media="(min-width: 768px)" srcset="images/project1.png">
-                                    <img src="images/project1.png" alt="Личный сайт" class="responsive-image" loading="lazy">
+                                    <img src="images/project1.png" 
+                                         alt="Личный сайт" 
+                                         class="responsive-image" 
+                                         loading="lazy"
+                                         decoding="async"
+                                         width="600"
+                                         height="400">
                                 </picture>
                             </div>
                             <div class="project-content">
@@ -149,7 +163,13 @@
                                 <picture>
                                     <source media="(min-width: 1200px)" srcset="images/project2.png">
                                     <source media="(min-width: 768px)" srcset="images/project2.png">
-                                    <img src="images/project2.png" alt="Qt-приложение" class="responsive-image" loading="lazy">
+                                    <img src="images/project2.png" 
+                                         alt="Qt-приложение" 
+                                         class="responsive-image" 
+                                         loading="lazy"
+                                         decoding="async"
+                                         width="600"
+                                         height="400">
                                 </picture>
                             </div>
                             <div class="project-content">
@@ -174,7 +194,7 @@
         </footer>
     </div>
 
-    <script src="js/script.js"></script>
+    <script src="js/script.js" defer></script>
 </body>
 
 </html>
