--- a/index.html
+++ b/index.html
@@ -148,12 +148,12 @@
                                     />
                                     <source
                                         media="(min-width: 1200px)"
-                                        srcset="images/project1.png"
+                                        srcset="images/project1-1280.png"
                                         type="image/png"
                                     />
                                     <source
                                         media="(min-width: 768px)"
-                                        srcset="images/project1.png"
+                                        srcset="images/project1-960.png"
                                         type="image/png"
                                     />
                                     <img
@@ -197,18 +197,13 @@
                                         type="image/webp"
                                     />
                                     <source
-                                        media="(min-width: 768px)"
-                                        srcset="images/project2.webp"
-                                        type="image/webp"
-                                    />
-                                    <source
                                         media="(min-width: 1200px)"
-                                        srcset="images/project2.png"
+                                        srcset="images/project2-1280.png"
                                         type="image/png"
                                     />
                                     <source
                                         media="(min-width: 768px)"
-                                        srcset="images/project2.png"
+                                        srcset="images/project2-960.png"
                                         type="image/png"
                                     />
                                     <img
